welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:5: error: Missing closing brace `}' assumed here
def marque(){
^FlowerPot:5: error: expected class or object definition
def marque(){
^FlowerPot:10: error: expected class or object definition
def growbasic(){
^